force-app/main/default/objects/In_flight_Compensation_Master__mdt/In_flight_Compensation_Master__mdt.object-meta.xml
<CustomObject>
    <label>In-flight Compensation Master</label>
    <pluralLabel>In-flight Compensation Master</pluralLabel>
</CustomObject>