force-app/main/default/objects/In_flight_Compensation_Master__mdt/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>