force-app/main/default/objects/In_flight_Compensation_Master__mdt/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>